--- a/jQuery-Lesson/app.html
+++ b/jQuery-Lesson/app.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="ja">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
   </head>
   <body>
+    <script src="jquery.min.js"></script>
     <script src="sample.js"></script>
   </body>
 </html>
